# ufawkesdora

./: .env.example  .markdownlint.json  .pipeline.yml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  AI_STANCE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  build-report.md  ci-diagnosis.md  ci-fix-report.md  design.md  discovery-brief.md  docker-compose.dev.yml  docker-compose.integration.yml  docker-compose.test.yml  pyproject.toml  requirements-ingestion.txt  requirements-test.txt  review-report.md  specification.md  tasks.json  test-report.md
.agents/logs/: 2026-06-24.jsonl  2026-06-26.jsonl
.github/workflows/: ci-pipeline.yml  ci-tests.yml  ci.yml  compute-archetype.yml  compute-metrics.yml  deploy.yml  docs-lint.yml  main-ci-guard.yml  pipeline.yml  post-commit.yml  post-deployment.yml  pre-commit.yml  pre-deployment.yml  release.yml  reusable-build.yml  reusable-dependency-review.yml  reusable-deploy.yml  reusable-lint.yml  reusable-post-deploy.yml  reusable-preflight.yml  scheduled.yml  (+3 more)
alerts/: dora-regression.yaml  leading-indicator.yaml
compute/: __init__.py  archetype.py  archetype_survey.md  metrics.py  requirements.txt  vsi.py
dashboards/: README.md  ai-impact.json  archetype-profile.json  dora-overview.json  leading-indicators.json  value-stream.json
docs/: PR_STANDARD.md
events/: README.md  deployment-event.schema.json  incident-event.schema.json  pr-event.schema.json  rework-event.schema.json
ingestion/: Dockerfile
notifications/: demo.py  test_notifiers.py
scripts/: commit-msg.sh
tests/: README.md
(+50 files in other folders)
